# bayes

./: README.md  pyproject.toml
bayes/: .gitignore  pyproject.toml
sample/: README.md  __init__.py  pyproject.toml
sample/code/: tmp.ipynb
