[tool.poetry]
name = "bayes"
version = "0.1.0"
description = ""
authors = ["ytstoneriver <muinature@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^ 1.24.2"
pandas = "^ 1.5.3"
arviz = "^ 0.15.1"
lab = "^7.4"
matplotlib = "^ 3.7.1"
seaborn = "^ 0.12.2"
pymc = "^ 5.5.0"
jupyterlab = "^ 3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
